tests/golden/type_errors/namespace_import_private_member.err
Type error at <repo>/tests/golden/type_errors/namespace_import_private_member.cd:2:11: module namespace `lib` has no exported member `hidden`
  print lib.hidden;
            ^
